--- a/bindings/luabot/init.lua.in
+++ b/bindings/luabot/init.lua.in
@@ -1,3 +1,6 @@
+---SPDX-FileCopyrightText: Michael Fisher @mfisher31
+---SPDX-License-Identifier: MIT
+
 ---@class luabot
 ---@field VERSION string The luabot version
 ---@field BUILD_TYPE string The build type (Debug, Release, etc.)
