--- a/.github/workflows/reuse.yaml
+++ b/.github/workflows/reuse.yaml
@@ -1,5 +1,5 @@
 # SPDX-FileCopyrightText: Michael Fisher @mfisher31
-# SPDX-License-Identifier: CC0-1.0
+# SPDX-License-Identifier: MIT
 name: REUSE
 on:
   push:
