build: update CMake configuration for packaging and installation components refactor: remove unnecessary newline in Lua initialization file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: MIT
 
 cmake_minimum_required(VERSION 3.20.0)
-project('luabot' VERSION 0.0.1)
+project(luabot VERSION 0.0.1)
 
 option(LUABOT_BUILD_CONSOLE "Build the luabot console application" ON)
 option(LUABOT_BUILD_TESTS "Build the unit tests" ON)
@@ -19,6 +19,9 @@ endif()
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+set(CMAKE_OSX_ARCHITECTURES arm64;x86_64)
+set(CMAKE_OSX_DEPLOYMENT_TARGET "10.15")
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 # Generate version header
@@ -72,39 +75,47 @@ add_subdirectory(bindings)
 set(LUABOT_INCLUDE_DIR "include" CACHE STRING "Include directory to install headers and ffi binding code" )
 install(DIRECTORY ${CMAKE_BINARY_DIR}/include/luabot
     DESTINATION "${LUABOT_INCLUDE_DIR}"
+    COMPONENT Core
     FILES_MATCHING PATTERN "*.h" PATTERN "*.hpp" PATTERN "*.ipp" PATTERN "*.cpp")
 
 # Install source headers
 install(DIRECTORY ${CMAKE_SOURCE_DIR}/include/luabot
     DESTINATION "${LUABOT_INCLUDE_DIR}"
+    COMPONENT Core
     FILES_MATCHING PATTERN "*.h" PATTERN "*.h.in" EXCLUDE)
 
 # Install generated Lua binding sources
 set(LUABOT_LUA_DIR "share/luajit-2.1" CACHE STRING "Sub path to install lua files" )
 install(DIRECTORY ${CMAKE_BINARY_DIR}/lua/wpi
     DESTINATION "${LUABOT_LUA_DIR}"
+    COMPONENT Core
     FILES_MATCHING PATTERN "*.lua")
 
 # 3rdparty/bin/* goes to cmake bin dir
 install(DIRECTORY ${CMAKE_SOURCE_DIR}/3rdparty/bin/
     DESTINATION bin
-    USE_SOURCE_PERMISSIONS)
+    USE_SOURCE_PERMISSIONS
+    COMPONENT Core)
 
 # 3rdparty/lib/* goes to cmake lib dir
 install(DIRECTORY ${CMAKE_SOURCE_DIR}/3rdparty/lib/
-    DESTINATION lib)
+    DESTINATION lib
+    COMPONENT Core)
 
 # 3rdparty/include/* goes to cmake include dir
 install(DIRECTORY ${CMAKE_SOURCE_DIR}/3rdparty/include/
-    DESTINATION include)
+    DESTINATION include
+    COMPONENT Core)
 
 # 3rdparty/share/* goes to cmake share dir
 install(DIRECTORY ${CMAKE_SOURCE_DIR}/3rdparty/share/
-    DESTINATION share)
+    DESTINATION share
+    COMPONENT Core)
 
 # 3rdparty/linuxathena/* goes to cmake prefix slash linuxathena
 install(DIRECTORY ${CMAKE_SOURCE_DIR}/3rdparty/linuxathena/
-    DESTINATION linuxathena)
+    DESTINATION linuxathena
+    COMPONENT Core)
 
 if(LUABOT_BUILD_CONSOLE)
     if(WIN32)
@@ -196,7 +207,8 @@ if(LUABOT_BUILD_CONSOLE)
         INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
 
     install(TARGETS luabot
-        RUNTIME DESTINATION bin)
+        RUNTIME DESTINATION bin
+        COMPONENT Core)
     
     # Enable testing
     if(LUABOT_BUILD_TESTS)
@@ -204,3 +216,58 @@ if(LUABOT_BUILD_CONSOLE)
         add_subdirectory(test)
     endif()
 endif()
+
+# CPack
+set(CPACK_PACKAGE_NAME "luabot")
+set(CPACK_PACKAGE_VENDOR "LuaBot")
+set(CPACK_PACKAGE_CONTACT "LuaBot Developers")
+set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "${LUABOT_DESCRIPTION_SUMMARY}")
+set(CPACK_PACKAGE_VERSION "${PROJECT_VERSION}")
+set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
+set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
+set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
+set(CPACK_PACKAGE_INSTALL_DIRECTORY "LuaBot")
+set(CPACK_RESOURCE_FILE_README "${PROJECT_SOURCE_DIR}/LICENSES/MIT.txt")
+set(CPACK_RESOURCE_FILE_LICENSE "${PROJECT_SOURCE_DIR}/LICENSES/MIT.txt")
+
+if(LINUX)
+    set(LUABOT_SYSTEM_NAME "linux")
+    string(TOLOWER "${CMAKE_SYSTEM_PROCESSOR}" LUABOT_PROCESSOR)
+    set(CPACK_GENERATOR "DEB")
+    set(CPACK_ARCHIVE_COMPONENT_INSTALL OFF)
+    set(CPACK_PACKAGING_INSTALL_PREFIX "/usr")
+    set(CPACK_DEBIAN_PACKAGE_DEPENDS "libfreetype6;libx11-6;libxext6;libxrandr2;libxinerama1;libxcursor1;libcurl4;libgl1;libstdc++6")
+elseif(APPLE)
+    set(LUABOT_SYSTEM_NAME "macos")
+    set(LUABOT_PROCESSOR "universal")
+    set(CPACK_GENERATOR "productbuild")
+    set(CPACK_COMPONENT_INSTALL ON)
+    set(CPACK_SET_DESTDIR OFF)
+    set(CPACK_PACKAGING_INSTALL_PREFIX "/opt/luabot")
+    set(CPACK_PRODUCTBUILD_IDENTIFIER "org.luabot.installer")
+elseif(WIN32)
+    set(CPACK_NSIS_PACKAGE_NAME "LuaBot")
+    set(LUABOT_SYSTEM_NAME "windows")
+    string(TOLOWER "${CMAKE_SYSTEM_PROCESSOR}" LUABOT_PROCESSOR)
+    set(CPACK_GENERATOR "NSIS")
+    set(CPACK_SET_DESTDIR OFF)
+    set(CPACK_PACKAGE_INSTALL_DIRECTORY "LuaBot")
+    set(CPACK_COMPONENT_INSTALL ON)
+    set(CPACK_PACKAGING_INSTALL_PREFIX "/")
+    set(CPACK_NSIS_ENABLE_UNINSTALL_BEFORE_INSTALL ON)
+    set(CPACK_NSIS_MODIFY_PATH OFF)
+endif()
+
+set(LUABOT_GENERATOR ${CPACK_GENERATOR})
+message(STATUS "Using CPack generator: ${LUABOT_GENERATOR}")
+set(CPACK_PACKAGE_FILE_NAME "${PROJECT_NAME}-${CPACK_PACKAGE_VERSION}-${LUABOT_SYSTEM_NAME}-${LUABOT_PROCESSOR}")
+set(LUABOT_PACKAGE_FILE_NAME "${CPACK_PACKAGE_FILE_NAME}")
+include(CPack)
+
+add_custom_target(installer
+    COMMAND ${CMAKE_COMMAND} -E rm -rf "${PROJECT_BINARY_DIR}/_CPack_Packages"
+    COMMAND ${CMAKE_COMMAND} --build "${PROJECT_BINARY_DIR}" --target package
+    COMMAND ${CMAKE_COMMAND} -E rm -rf "${PROJECT_BINARY_DIR}/_CPack_Packages"
+    COMMENT "Cleaning CPack staging and building package"
+    VERBATIM
+    USES_TERMINAL)
