--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,7 +25,15 @@ jobs:
         uses: seanmiddleditch/gha-setup-ninja@v4
 
       - name: Dependencies
-        run: apt-get update && apt-get install -y gcc-multilib dos2unix
+        run: apt-get update && apt-get install -y build-essential gcc-multilib \
+          dos2unix pkg-config apt-transport-https ca-certificates  gnupg \
+          software-properties-common tzdata ca-certificates cmake curl \
+          fakeroot g++ --no-install-recommends gcc  gdb  gfortran git \
+          java-common libc6-dev libgl1-mesa-dev \
+          libglu1-mesa-dev libisl-dev libopencv-dev libvulkan-dev \
+          libx11-dev libxcursor-dev libxi-dev \
+          libxinerama-dev libxrandr-dev make mesa-common-dev \
+          python3-dev python3-pip python3-setuptools sudo unzip wget zip
 
       - name: LuaJIT
         run: |
