--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,7 +24,7 @@ jobs:
         uses: seanmiddleditch/gha-setup-ninja@v4
 
       - name: Dependencies
-        run: apt-get update && apt-get install -y build-essential gcc-multilib \
+        run: sudo apt-get update && sudo apt-get install -y build-essential gcc-multilib \
           dos2unix pkg-config apt-transport-https ca-certificates  gnupg \
           software-properties-common tzdata ca-certificates cmake curl \
           fakeroot g++ --no-install-recommends gcc  gdb  gfortran git \
@@ -35,7 +35,7 @@ jobs:
           python3-dev python3-pip python3-setuptools sudo unzip curl wget zip
 
       - name: roboRIO Toolchain
-        run: curl -SL https://github.com/wpilibsuite/opensdk/releases/download/v2025-1/cortexa9_vfpv3-roborio-academic-2025-x86_64-linux-gnu-Toolchain-12.1.0.tgz | sh -c 'mkdir -p /usr/local && cd /usr/local && tar xzf - --strip-components=2'
+        run: sudo curl -SL https://github.com/wpilibsuite/opensdk/releases/download/v2025-1/cortexa9_vfpv3-roborio-academic-2025-x86_64-linux-gnu-Toolchain-12.1.0.tgz | sh -c 'mkdir -p /usr/local && cd /usr/local && tar xzf - --strip-components=2'
       
       - name: LuaJIT
         run: |
