build: add cmake and ninja to apt install

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,12 +17,6 @@ jobs:
         with:
           submodules: true
 
-      - name: Set up CMake
-        uses: jwlawson/actions-setup-cmake@v1
-
-      - name: Set up Ninja
-        uses: seanmiddleditch/gha-setup-ninja@v4
-
       - name: Dependencies
         run: sudo apt-get update && sudo apt-get install -y build-essential gcc-multilib \
           dos2unix pkg-config apt-transport-https ca-certificates  gnupg \
@@ -30,7 +24,7 @@ jobs:
           fakeroot g++ --no-install-recommends gcc  gdb  gfortran git \
           java-common libc6-dev libgl1-mesa-dev \
           libglu1-mesa-dev libisl-dev libopencv-dev libvulkan-dev \
-          libx11-dev libxcursor-dev libxi-dev \
+          libx11-dev libxcursor-dev libxi-dev cmake ninja \
           libxinerama-dev libxrandr-dev make mesa-common-dev \
           python3-dev python3-pip python3-setuptools sudo unzip curl wget zip
 
