--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,15 +18,49 @@ jobs:
           submodules: true
 
       - name: Dependencies
-        run: sudo apt-get update && sudo apt-get install -y build-essential gcc-multilib \
-          dos2unix pkg-config apt-transport-https ca-certificates  gnupg \
-          software-properties-common tzdata ca-certificates cmake curl \
-          fakeroot g++ --no-install-recommends gcc  gdb  gfortran git \
-          java-common libc6-dev libgl1-mesa-dev \
-          libglu1-mesa-dev libisl-dev libopencv-dev libvulkan-dev \
-          libx11-dev libxcursor-dev libxi-dev cmake ninja \
-          libxinerama-dev libxrandr-dev make mesa-common-dev \
-          python3-dev python3-pip python3-setuptools sudo unzip curl wget zip
+        run: |
+          set -euxo pipefail
+          sudo apt-get update
+          sudo apt-get install -y --no-install-recommends \
+            apt-transport-https \
+            build-essential \
+            ca-certificates \
+            cmake \
+            curl \
+            dos2unix \
+            fakeroot \
+            gcc \
+            gcc-multilib \
+            g++ \
+            gdb \
+            gfortran \
+            git \
+            gnupg \
+            java-common \
+            libc6-dev \
+            libgl1-mesa-dev \
+            libglu1-mesa-dev \
+            libisl-dev \
+            libopencv-dev \
+            libvulkan-dev \
+            libx11-dev \
+            libxcursor-dev \
+            libxi-dev \
+            libxinerama-dev \
+            libxrandr-dev \
+            make \
+            mesa-common-dev \
+            ninja-build \
+            pkg-config \
+            python3-dev \
+            python3-pip \
+            python3-setuptools \
+            software-properties-common \
+            sudo \
+            tzdata \
+            unzip \
+            wget \
+            zip
 
       - name: roboRIO Toolchain
         run: sudo curl -SL https://github.com/wpilibsuite/opensdk/releases/download/v2025-1/cortexa9_vfpv3-roborio-academic-2025-x86_64-linux-gnu-Toolchain-12.1.0.tgz | sh -c 'mkdir -p /usr/local && cd /usr/local && tar xzf - --strip-components=2'
