build: need pyyaml on linux

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -62,6 +62,7 @@ jobs:
             unzip \
             wget \
             zip
+          pip3 install pyyaml
       
       - name: LuaJIT
         run: |
