--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -159,7 +159,7 @@ jobs:
 
       - name: Dependencies
         run: |
-          pip install pyyaml
+          pip3 install pyyaml
 
       - name: LuaJIT
         run: |
