--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -31,6 +31,7 @@ luabot_add_api_test(TestClib wpi/TestClib.lua)
 luabot_add_api_test(TestCommand wpi/TestCommand.lua)
 luabot_add_api_test(TestCommandScheduler wpi/TestCommandScheduler.lua)
 luabot_add_api_test(TestDebouncer wpi/TestDebouncer.lua)
+luabot_add_api_test(TestDriverStation wpi/TestDriverStation.lua)
 luabot_add_api_test(TestEventLoop wpi/TestEventLoop.lua)
 luabot_add_api_test(TestFilesystem wpi/TestFilesystem.lua)
 luabot_add_api_test(TestFunctionalCommand wpi/TestFunctionalCommand.lua)
