feat: add GenericHID class with joystick functionality and tests in pure Lua

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -35,6 +35,7 @@ luabot_add_api_test(TestDriverStation wpi/TestDriverStation.lua)
 luabot_add_api_test(TestEventLoop wpi/TestEventLoop.lua)
 luabot_add_api_test(TestFilesystem wpi/TestFilesystem.lua)
 luabot_add_api_test(TestFunctionalCommand wpi/TestFunctionalCommand.lua)
+luabot_add_api_test(TestGenericHID wpi/TestGenericHID.lua)
 luabot_add_api_test(TestGeometry wpi/TestGeometry.lua)
 luabot_add_api_test(TestInstantCommand wpi/TestInstantCommand.lua)
 luabot_add_api_test(TestPose2d wpi/TestPose2d.lua)
