--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -26,6 +26,7 @@ endfunction()
 # Add tests
 luabot_add_api_test(RequireAll requireall.lua)
 luabot_add_api_test(TestAddressableLED wpi/TestAddressableLED.lua)
+luabot_add_api_test(TestBooleanEvent wpi/TestBooleanEvent.lua)
 luabot_add_api_test(TestClass TestClass.lua)
 luabot_add_api_test(TestClib wpi/TestClib.lua)
 luabot_add_api_test(TestCommand wpi/TestCommand.lua)
