Refactor joystick and XboxController bindings to be pure lua.
- Removed Joystick.yaml as it is no longer needed.
- Implemented Joystick in Lua (Joystick.lua) with methods for axis and button handling.
- Removed XboxController.yaml as it is no longer needed.
- Implemented XboxController in Lua (XboxController.lua) with methods for button and axis handling.
- Updated tests for Joystick and XboxController to validate functionality and ensure proper integration with HAL.
- Adjusted test cases for Joystick to reflect changes in construction and button handling.
- Added new test cases for XboxController to validate button and axis methods.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -39,12 +39,14 @@ luabot_add_api_test(TestFunctionalCommand wpi/TestFunctionalCommand.lua)
 luabot_add_api_test(TestGenericHID wpi/TestGenericHID.lua)
 luabot_add_api_test(TestGeometry wpi/TestGeometry.lua)
 luabot_add_api_test(TestInstantCommand wpi/TestInstantCommand.lua)
+luabot_add_api_test(TestJoystick wpi/TestJoystick.lua)
 luabot_add_api_test(TestPose2d wpi/TestPose2d.lua)
 luabot_add_api_test(TestRobots wpi/TestRobots.lua)
 luabot_add_api_test(TestRunCommand wpi/TestRunCommand.lua)
 luabot_add_api_test(TestSubsystem wpi/TestSubsystem.lua)
 luabot_add_api_test(TestTimed wpi/TestTimed.lua)
 luabot_add_api_test(TestTrigger wpi/TestTrigger.lua)
+luabot_add_api_test(TestXboxController wpi/TestXboxController.lua)
 
 # Simulation Tests
 # Helper function to add Lua tests
