--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -30,7 +30,10 @@ luabot_add_api_test(TestBooleanEvent wpi/TestBooleanEvent.lua)
 luabot_add_api_test(TestClass TestClass.lua)
 luabot_add_api_test(TestClib wpi/TestClib.lua)
 luabot_add_api_test(TestCommand wpi/TestCommand.lua)
+luabot_add_api_test(TestCommandGenericHID wpi/TestCommandGenericHID.lua)
+luabot_add_api_test(TestCommandJoystick wpi/TestCommandJoystick.lua)
 luabot_add_api_test(TestCommandScheduler wpi/TestCommandScheduler.lua)
+luabot_add_api_test(TestCommandXboxController wpi/TestCommandXboxController.lua)
 luabot_add_api_test(TestDebouncer wpi/TestDebouncer.lua)
 luabot_add_api_test(TestDriverStation wpi/TestDriverStation.lua)
 luabot_add_api_test(TestEventLoop wpi/TestEventLoop.lua)
