Add Core Commands API (#14)
* Implement Trigger, EventLoop, and Debouncer classes with comprehensive tests
  - Added Trigger class for managing conditions and commands with various event handling methods.
  - Introduced EventLoop class to manage and execute bound functions in a polling mechanism.
  - Created Debouncer class to handle debouncing logic for input signals with configurable debounce time and type.
  - Developed unit tests for Trigger, EventLoop, and Debouncer to ensure functionality and reliability.
  - Included error handling and validation in Trigger methods for command scheduling.
  - Enhanced test coverage for edge cases and method chaining in Trigger.
* DriverStation: bind up controller related methods.
* feat: add GenericHID class with joystick functionality and tests in pure Lua
* fix: remove redundant wpiHal loading in setOutput and setRumble methods
* feat: implement BooleanEvent class with comprehensive tests
* vendordep: experiment with zip packaging and json manifest.
* Refactor joystick and XboxController bindings to be pure lua.
  - Removed Joystick.yaml as it is no longer needed.
  - Implemented Joystick in Lua (Joystick.lua) with methods for axis and button handling.
  - Removed XboxController.yaml as it is no longer needed.
  - Implemented XboxController in Lua (XboxController.lua) with methods for button and axis handling.
  - Updated tests for Joystick and XboxController to validate functionality and ensure proper integration with HAL.
  - Adjusted test cases for Joystick to reflect changes in construction and button handling.
  - Added new test cases for XboxController to validate button and axis methods.
* feat: implement CommandGenericHID, CommandJoystick, and CommandXboxController classes with comprehensive tests
* feat: implement CommandRobot and TestRobot classes with command-based structure and testing capabilities
* feat: implement deferred command scheduling in CommandScheduler and update Trigger bindings
* plans: delete compl

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -26,19 +26,30 @@ endfunction()
 # Add tests
 luabot_add_api_test(RequireAll requireall.lua)
 luabot_add_api_test(TestAddressableLED wpi/TestAddressableLED.lua)
+luabot_add_api_test(TestBooleanEvent wpi/TestBooleanEvent.lua)
 luabot_add_api_test(TestClass TestClass.lua)
 luabot_add_api_test(TestClib wpi/TestClib.lua)
 luabot_add_api_test(TestCommand wpi/TestCommand.lua)
+luabot_add_api_test(TestCommandGenericHID wpi/TestCommandGenericHID.lua)
+luabot_add_api_test(TestCommandJoystick wpi/TestCommandJoystick.lua)
 luabot_add_api_test(TestCommandScheduler wpi/TestCommandScheduler.lua)
+luabot_add_api_test(TestCommandXboxController wpi/TestCommandXboxController.lua)
+luabot_add_api_test(TestDebouncer wpi/TestDebouncer.lua)
+luabot_add_api_test(TestDriverStation wpi/TestDriverStation.lua)
+luabot_add_api_test(TestEventLoop wpi/TestEventLoop.lua)
 luabot_add_api_test(TestFilesystem wpi/TestFilesystem.lua)
 luabot_add_api_test(TestFunctionalCommand wpi/TestFunctionalCommand.lua)
+luabot_add_api_test(TestGenericHID wpi/TestGenericHID.lua)
 luabot_add_api_test(TestGeometry wpi/TestGeometry.lua)
 luabot_add_api_test(TestInstantCommand wpi/TestInstantCommand.lua)
+luabot_add_api_test(TestJoystick wpi/TestJoystick.lua)
 luabot_add_api_test(TestPose2d wpi/TestPose2d.lua)
 luabot_add_api_test(TestRobots wpi/TestRobots.lua)
 luabot_add_api_test(TestRunCommand wpi/TestRunCommand.lua)
 luabot_add_api_test(TestSubsystem wpi/TestSubsystem.lua)
 luabot_add_api_test(TestTimed wpi/TestTimed.lua)
+luabot_add_api_test(TestTrigger wpi/TestTrigger.lua)
+luabot_add_api_test(TestXboxController wpi/TestXboxController.lua)
 
 # Simulation Tests
 # Helper function to add Lua tests
