vendordep: experimenting without structure and layout of artifacts

--- a/util/LuaBot.json.in
+++ b/util/LuaBot.json.in
@@ -12,7 +12,7 @@
     "jniDependencies": [],
     "cppDependencies": [
         {
-            "groupId": "",
+            "groupId": "org.luabot",
             "artifactId": "luabot",
             "version": "@PROJECT_VERSION@",
             "libName": "luajit-2.1",
