Update LuaBot.json.in: set version to @PROJECT_VERSION@ for luabot-lua dependency

--- a/vendordep/LuaBot.json.in
+++ b/vendordep/LuaBot.json.in
@@ -14,8 +14,9 @@
         {
             "groupId": "org.luabot",
             "artifactId": "luabot-lua",
-            "version": "0.0.1",
-            "moduleClassifier": "modules"
+            "version": "@PROJECT_VERSION@",
+            "moduleClassifier": "modules",
+            "ffiEnabled": true
         }
     ],
     "cppDependencies": [
