--- a/vendordep/LuaBot.json.in
+++ b/vendordep/LuaBot.json.in
@@ -17,6 +17,13 @@
             "version": "@PROJECT_VERSION@",
             "moduleClassifier": "modules",
             "ffiEnabled": true
+        },
+        {
+            "groupId": "org.luabot",
+            "artifactId": "luajit-lua",
+            "version": "2.1",
+            "moduleClassifier": "modules",
+            "ffiEnabled": true
         }
     ],
     "cppDependencies": [
